Infer nullability and remove redundant toString